text wrap for the selected bus stops in stop selection page.

--- a/scss/bookingStops.scss
+++ b/scss/bookingStops.scss
@@ -115,12 +115,12 @@
       @include flex-shrink;
 
       .bus-stop-selector:nth-of-type(1) .stop-icon {
-        background: url('../img/RoutePairBigStart.svg') 0 0 no-repeat transparent;
+        background: url('../img/RoutePairBigStart.svg') 0 50% no-repeat transparent;
         background-size: 24px 24px;
       }
 
       .bus-stop-selector:nth-of-type(2) .stop-icon {
-        background: url('../img/RoutePairBigEnd.svg') 0 0 no-repeat transparent;
+        background: url('../img/RoutePairBigEnd.svg') 0 50% no-repeat transparent;
         background-size: 24px 24px;
       }
     }
